<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="@dimen/margin_normal"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_normal"
        app:backgroundColor="@color/colorPrimary"
        app:loadingProgressColor="@color/colorPrimaryDark"
        app:loadingCircleColor="@color/colorAccent"
        app:labelTextColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/sourceSelection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_normal"
        app:layout_constraintTop_toBottomOf="@id/loading_cloud_image"
        app:layout_constraintBottom_toTopOf="@+id/custom_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/glide_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_normal"
            android:text="@string/glide_radio"
            android:textSize="@dimen/default_text_size" />

        <RadioButton
            android:id="@+id/loadapp_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_normal"
            android:text="@string/loadapp_radio"
            android:textSize="@dimen/default_text_size" />

        <RadioButton
            android:id="@+id/retrofit_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retrofit_radio"
            android:textSize="@dimen/default_text_size" />
    </RadioGroup>

    <ImageView
        android:id="@+id/loading_cloud_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/image_padding"
        android:paddingEnd="@dimen/image_padding"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_cloud_download_24" />

</androidx.constraintlayout.widget.ConstraintLayout>